# wgpu-playground

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
src/: app.rs  main.rs  renderer.rs  rendering.rs  shader.wgsl  shaders.rs  simulation.rs
src/renderer/: mod.rs
src/rendering/: camera.rs  render_config.rs  render_pass.rs  render_pipeline.rs  renderer.rs  simulation_resources.rs  surface.rs
src/shaders/: pentagon.rs  triangle.rs
src/simulation/: config.rs  earth_moon.rs  galaxy.rs  init.rs  manager.rs  mod.rs  n_body.wgsl  resources.rs  solar_system.rs  trait_def.rs  types.rs
src/utils/: color.rs
