[package]
name = "webgpu-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.8"
pollster = "0.4.0"
wgpu = { version = "25.0.0" }
winit = { version = "0.30.9", features = ["android-native-activity"] }
bytemuck = { version = "1.14", features = ["derive"] }
glam = "0.25"
rand = "0.8"
log = "0.4"

[features]

[lints.rust]

elided_lifetimes_in_paths = "warn"
explicit_outlives_requirements = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
unreachable_pub = "warn"

[lints.clippy]
complexity = { level = "warn", priority = -1 }
correctness = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
restriction = { level = "allow", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }